fix: Breadcrumb alignment with sidebar

--- a/frappe/public/scss/website.scss
+++ b/frappe/public/scss/website.scss
@@ -115,8 +115,8 @@
 }
 
 .breadcrumb {
-	padding-left: 0;
-	padding-right: 0;
+	padding: 0;
+	font-size: $font-size-sm;
 	background-color: white;
 }
 
